welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: illegal start of simple expression
	var baggle = 0
        ^