welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
do{
	
for (compteur <- 1 to 5) // compteur 5 cases
	var baggle = 0
			if (estSurBiscuit())
				baggle=baggle +1
  avance()
	if (baggle <=2)
		droite()
	if (baggle >=3)
		gauche()
}	while (!sortieTrouvee())